# Sober

./: .gitignore  .gitmodules  README.md  meson.build
src/: app_methods.cpp  app_methods.hpp  app_state.cpp  app_state.hpp  execution_context.cpp  execution_context.hpp  function_traits.hpp  jni.cpp  jni.hpp  keyboard.cpp  keyboard.hpp  main.cpp  trampoline.cpp  trampoline.hpp  types.hpp  window.cpp  window.hpp
src/class/: android_classes.cpp  audio_interface.cpp  battery_status.cpp  classes.cpp  classes.hpp  device_params.cpp  init_params.cpp  java_primitive_wrappers.cpp  native_gl_interface.cpp  native_locale_java_interface.cpp  platform_params.cpp  session_reporter_interface.cpp  start_app_params.cpp  start_game_params.cpp  user_java_interface.cpp
src/libs/: android_syms.cpp  egl_syms.cpp  glesv2_syms.cpp  libc_impl.cpp  libc_impl.hpp  libm_syms.cpp  log_syms.cpp  mediandk_syms.cpp  opensles_syms.cpp  pthread_impl.cpp  pthread_impl.hpp  syms.cpp  syms.hpp  vulkan_syms.cpp  zlib_syms.cpp
subprojects/: dyncall.wrap
subprojects/dynarmic/src/dynarmic/backend/x64/: a64_emit_x64.cpp  a64_interface.cpp  abi.h  block_of_code.cpp  block_of_code.h
subprojects/dynarmic/src/dynarmic/interface/A64/: config.h
subprojects/liblinker/: meson.build
subprojects/liblinker/internal_includes/: assert.h  sobercompat.h
subprojects/liblinker/internal_includes/android/: api-level.h  dlext.h  fdsan.h  ndk-version.h  set_abort_message.h
subprojects/liblinker/internal_includes/android-base/: threads.h  utf8.h
subprojects/liblinker/internal_includes/platform/bionic/: malloc.h
subprojects/liblinker/internal_includes/sys/: auxv.h  cdefs.h  prctl.h
subprojects/liblinker/src/: linker.cpp  linker.hpp
subprojects/packagefiles/dyncall-1.4/: meson.build
subprojects/packagefiles/dyncall-1.4/dyncall/: meson.build
